<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Button
                android:id="@+id/qq_login"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/login_qq"
                android:background="@color/blue"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:text="@string/login_qq"/>
            <Button
                android:id="@+id/weixin_login"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/login_wx"
                android:background="@color/green"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:text="@string/login_weixin"/>
            <Button
                android:id="@+id/weibo_login"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/login_weibo"
                android:background="@color/red"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:text="@string/login_weibo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>